// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/columns/RaceTimes renders everytime 1`] = `
<td>
  <div>
    Every 3 hours starting at 1:30 UTC
  </div>
</td>
`;

exports[`components/columns/RaceTimes renders no time data 1`] = `
<td>
  No time data
</td>
`;

exports[`components/columns/RaceTimes renders settimes 1`] = `
<td
  className="clickableCell"
>
  <button
    className="cellButton"
    onClick={[Function]}
    onKeyPress={[Function]}
    type="button"
  >
    Set Times
  </button>
  <Modal
    doneAction={[Function]}
    doneButtonText="Close"
    isOpen={false}
    onClose={[Function]}
    showFooter={true}
    title="Set times for Mazda Cup"
  >
    <div
      className="container-fluid"
    >
      <ul>
        <li
          key="266400000"
        >
          Fri 2:00am (Fri 2:00am )
        </li>
        <li
          key="392400000"
        >
          Sat 1:00pm (Sat 1:00pm )
        </li>
      </ul>
    </div>
  </Modal>
</td>
`;

exports[`components/columns/RaceTimes renders settimes 2`] = `
<td
  className="clickableCell"
>
  <button
    className="cellButton"
    onClick={[Function]}
    onKeyPress={[Function]}
    type="button"
  >
    Set Times
  </button>
  <Modal
    doneAction={[Function]}
    doneButtonText="Close"
    isOpen={false}
    onClose={[Function]}
    showFooter={true}
    title="Set times for Mazda Cup"
  >
    <div
      className="container-fluid"
    >
      <ul>
        <li
          key="266400000"
        >
          Fri 2:00am (Fri 2:00am )
        </li>
        <li
          key="392400000"
        >
          Sat 1:00pm (Sat 1:00pm )
        </li>
      </ul>
    </div>
  </Modal>
</td>
`;

exports[`components/columns/RaceTimes renders settimes 3`] = `
<td
  className="clickableCell"
>
  <button
    className="cellButton"
    onClick={[Function]}
    onKeyPress={[Function]}
    type="button"
  >
    Set Times
  </button>
  <Modal
    doneAction={[Function]}
    doneButtonText="Close"
    isOpen={false}
    onClose={[Function]}
    showFooter={true}
    title="Set times for Mazda Cup"
  >
    <div
      className="container-fluid"
    >
      <ul>
        <li
          key="266400000"
        >
          Fri 2:00am (Fri 2:00am )
        </li>
        <li
          key="392400000"
        >
          Sat 1:00pm (Sat 1:00pm )
        </li>
      </ul>
    </div>
  </Modal>
</td>
`;
